Worked on product service and other service create enum for route list